# simple-task-multilang-comparison

proj-asm/: .gitignore  Makefile  main.s  parse.i  syscall.i
proj-c/: .gitignore  CMakeLists.txt  Makefile  main1.c  main2.c
proj-cpp/: .gitignore  CMakeLists.txt  Makefile  main1.cpp  main2.cpp
proj-go/: Makefile  go.mod  main1.go  main2.go
proj-py/: .gitignore  main.py
proj-rs/proj-1/: .gitignore  Cargo.toml
proj-rs/proj-1/src/: main.rs
proj-rs/proj-2/: Cargo.toml
proj-rs/proj-2/src/: main.rs
